fix(marketplace): update new ui for fav icon and fix flickering issue on click

--- a/src/components/shared/MobileMenu/MobileMenu.scss
+++ b/src/components/shared/MobileMenu/MobileMenu.scss
@@ -30,9 +30,18 @@ a.link-router-text {
 }
 
 .font-libre {
-  font-family: 'LibreFranklin-Medium', -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol' !important;
+  font-family:
+    'LibreFranklin-Medium',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    'Helvetica Neue',
+    Arial,
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol' !important;
 }
 
 .titleBox {
@@ -44,8 +53,17 @@ a.link-router-text {
   text-decoration: none !important;
   white-space: nowrap !important;
   font-size: 14px !important;
-  font-family: 'LibreFranklin-Medium', -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol' !important;
+  font-family:
+    'LibreFranklin-Medium',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    'Helvetica Neue',
+    Arial,
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol' !important;
   cursor: pointer !important;
 }
